navibar fixed when on mobile

--- a/individualworksstyle.css
+++ b/individualworksstyle.css
@@ -87,19 +87,23 @@ p {
 }
 
 
-.navbar a::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: -5px;
-  width: 100%;
-  height: 2px;
-  background-color: #291900;
-  transition: bottom 0.3s ease;
-}
+@media only screen and (min-width: 420px) {
 
-.navbar a:hover::after {
-  bottom: 6px;
+  .navbar a::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -5px;
+    width: 100%;
+    height: 2px;
+    background-color: #291900;
+    transition: bottom 0.3s ease;
+  }
+  
+  .navbar a:hover::after {
+    bottom: 6px;
+  }
+
 }
 
   .topContainer {
@@ -128,6 +132,25 @@ p {
     }
   }
 
+  /* Style for the lightbox container */
+#lightbox {
+  display: none; /* Hide the lightbox by default */
+  position: fixed; /* Fixed position */
+  top: 0;
+  left: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  background-color: rgba(0,0,0,0.8); /* Semi-transparent black background */
+  z-index: 9999; /* Ensure it appears above other elements */
+  text-align: center; /* Center the image horizontally and vertically */
+}
+
+/* Style for the larger image */
+#lightboxImage {
+  margin-top: 5%; /* Adjust the top margin as needed */
+  max-width: 80%; /* Limit the maximum width of the image */
+  max-height: 80%; /* Limit the maximum height of the image */
+}
 
 .content {
     display: flex;
@@ -241,6 +264,9 @@ p {
     border-radius: 5%;
     max-width: 100%;
     padding-top: 3%;
+}
+.imgBorder:hover {
+  cursor: pointer;
 }
 
 .photoText {
