--- a/workstyle.css
+++ b/workstyle.css
@@ -75,19 +75,23 @@ p {
   }
   
   
-  .navbar a::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: -5px;
-    width: 100%;
-    height: 2px;
-    background-color: #291900;
-    transition: bottom 0.3s ease;
-  }
+  @media only screen and (min-width: 420px) {
+
+    .navbar a::after {
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: -5px;
+      width: 100%;
+      height: 2px;
+      background-color: #291900;
+      transition: bottom 0.3s ease;
+    }
+    
+    .navbar a:hover::after {
+      bottom: 6px;
+    }
   
-  .navbar a:hover::after {
-    bottom: 6px;
   }
 
 .content {
